sass/ppc.scss
/* ... */
.main {
    margin-top: 80px;
    @media (max-width: 575.98px) {
        margin-top: 72px;
    }
}

.section {
    @include rfs(7.5rem 0, padding);
    &__preheading {
        @include font-size(1.25rem);
        font-weight: 300;
        color: $primary;
        position: relative;
        display: inline-block;
        left: 24px;
        &::before {
            content: '';
            display: inline-block;
            width: 20px;
            height: 1px;
            background-color: $primary;
            position: absolute;
            top: 50%;
            left: -24px;
        }
    }
    &__heading {
        @include rfs(3.5rem, margin-bottom);
        &_mb-small {
            margin-bottom: 1rem;
        }
    }
    &_large-gap {
        @include rfs(8.75rem 0, padding);
    }
}


// SPINNER
// =============================================================================

.spinner-wrapper {
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    background: $primary;
    background: linear-gradient(-45deg, $dark 0%, $primary 50%);
    background-size: 400% 400%;
	animation: gradient 15s ease infinite;
    z-index: 9999999;
}

.spinner {
    width: 100px;
    height: 50px;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    margin: auto;
    text-align: center;
    &__ball {
        width: 20px;
        height: 20px;
        background-color: #fff;
        border-radius: 50%;
        display: inline-block;
        animation: motion 3s cubic-bezier(0.77, 0, 0.175, 1) infinite;
    }
    &__text {
        color: #fff;
        margin-top: 4px;
        font-family: sans-serif;
        letter-spacing: 3px;
        font-size: 10px;
    }
}


// TO TOP
// =============================================================================

.to-top {
    z-index: 99999;
    position: fixed;
    bottom: 0;
    right: 0;
    width: 48px;
    height: 48px;
    color: black;
    &:hover {
        color: black;
    }
}


// Header
// =============================================================================

.header {
    position: fixed;
    z-index: 99999999;
    width: 100%;
    // background: linear-gradient(270deg, #0F75BC 0%, #083B5E 50%);
    background-color: $primary;
    .navbar-toggler {
        border-radius: 4px;
    }
    &_shadow {
        box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
    }
}

.navbar-brand {
    line-height: 1;
    img {
        height: 32px;
        @media (max-width: 575.98px) {
            height: 24px;
        }
    }
}


// Headroom
// =============================================================================

.headroom {
    will-change: transform;
    transition: transform 200ms linear;
}
.headroom--pinned {
    transform: translateY(0%);
}
.headroom--unpinned {
    transform: translateY(-100%);
}


// Hero
// =============================================================================

.hero {
    z-index: 9999999;
    position: relative;
    &-bg-wrapper {
        max-width: 54%;
        position: relative;
        z-index: 1;
        .ratio-box {
            border-radius: 0 4px 4px 0;
        }
        &::after {
            content: '';
            display: block;
            width: 100%;
            height: 100%;
            background-color: rgba($dark, 0.3);
            position: absolute;
            top: 0;
            left: 0;
            right: 0;
            border-radius: 0 4px 4px 0;
        }
        @media (max-width: 1199.98px) {
            max-width: 100vw;
            .ratio-box {
                border-radius: 0;
            }
            &::after {
                border-radius: 0; 
            }
        }
        @media (max-width: 575.98px) {
            &::after {
                display: none;
            }
        }
    }
    &-text-wrapper {
        // background: linear-gradient(270deg, #0F75BC 0%, #083B5E 50%);
        background-color: $primary;
        position: absolute;
        top: 0;
        right: 0;
        width: 100%;
        padding: 4.2vw 0;
        &__title {
            font-size: 4.375vw;
            max-width: 41.666vw;
            position: relative;
            z-index: 2;
            margin-bottom: 0.625vw;
            margin-left: auto;
            @media (max-width: 1199.98px) {
                max-width: 800px;
                margin-right: auto;
                @include font-size(5.25rem);
                margin-bottom: 0.75rem;
            }
        }
        &__lead {
            font-size: 1.666vw;
            max-width: 41.666vw;
            position: relative;
            z-index: 2;
            margin-bottom: 2.292vw;
            margin-left: auto;
            @media (max-width: 1199.98px) {
                max-width: 800px;
                margin-right: auto;
                @include font-size(2rem);
                @include rfs(2.75rem, margin-bottom);
            }
        }
        &__buttons {
            position: relative;
            z-index: 2;
            @media (max-width: 575.98px) {
                a {
                    display: block;
                    width: 100%;
                    &:first-child {
                        margin-bottom: 0.75rem;
                    }
                }
            }
        }
        @media (max-width: 1199.98px) {
            top: 50%;
            transform: translateY(-50%);
            z-index: 1;
            background: transparent;
        }
        @media (max-width: 575.98px) {
            position: static;
            // @include rfs(20rem 0, padding);
            transform: translateY(0);
            min-height: calc(100vh - 56.25vw - 72px);
            display: flex;
            align-items: center;
        }
    }
}
/* ... */

